<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">餐厅助手</string>
    <string name="prefs_menu">配置</string>
    <string name="login_activity_user_name">用户名</string>
    <string name="login_activity_user_passwd">密码</string>
    <string name="login_activity_login">登录</string>
    <string name="dialogbox_ok">确定</string>
    <string name="login_activity_user_name_is_null">用户名为空，请输入用户名！</string>
    <string name="login_activity_user_passwd_is_null">密码为空，请输入密码！</string>
    <string name="exit_menu">退出</string>
    <string name="before_login_activity_want_to_logout">你确定要退出吗？</string>
    <string name="prefs_activity_server_address_title">设置服务器地址</string>
    <string name="prefs_activity_server_address_summary">请填入后台服务器地址或域名</string>
    <string name="prefs_activity_server_address_dialog_title">服务器地址</string>
    <string name="before_login_activity_server_address_is_null">服务器地址不能为空</string>
    <string name="prefs_activity_server_address_default_value">172.16.3.146</string>
    <string name="main_menu">主页</string>
    <string name="check_table_activity_check_empty_table">查找空桌</string>
    <string name="check_table_activity_table_num">桌号</string>
    <string name="check_table_activity_table_seat_num">座位数</string>
    <string name="dialogbox_cancel">取消</string>
    <string name="create_table_activity_table_num">桌号</string>
    <string name="create_table_activity_button">开新桌</string>
    <string name="create_table_activity_table_num_is_null">桌号不能为空</string>
    <string name="check_order_activity_table_num">桌号</string>
    <string name="check_order_activity_table_num_button">通过桌号查找</string>
    <string name="check_order_activity_table_num_is_null">桌号不能全为空</string>
    <string name="check_order_activity_order_num">订单号</string>
    <string name="check_order_activity_order_num_button">通过订单号查找</string>
    <string name="check_order_activity_order_num_is_null">订单号不能为空</string>
    <string name="activity_asynctask_running">操作正在处理，请稍候再试</string>
    <string name="activity_asynctask_failure">操作处理失败，请重新再试</string>
    <string name="login_activity_remote_failure">用户名或密码错误，请重新输入</string>
    <string name="check_order_activity_remote_failure">该订单不存在，请重新输入</string>
    <string name="check_table_activity_remote_failure">目前没有空闲的桌位，请稍候</string>
    <string name="create_table_activity_remote_failure">开桌失败，可能没有空闲的桌位，请稍候再试</string>
    <string name="order_activity_order">订单号</string>
    <string name="order_activity_waiter">服务员</string>
    <string name="order_activity_time">下单时间</string>
    <string name="order_activity_table">桌号</string>
    <string name="order_activity_menu_list">订单明细</string>
    <string name="order_activity_pay">是否付款</string>
    <string name="order_activity_order_menu">进入选菜</string>
    <string name="order_activity_return_main">返回主页</string>
    <string name="order_activity_delete_order">删除订单</string>
    <string name="order_activity_load_order_remote_failure">订单不存在，请返回主页重新查找</string>
    <string name="order_activity_listview_menu">菜名</string>
    <string name="order_activity_listview_price">价格</string>
    <string name="order_activity_listview_amount">数量</string>
    <string name="order_activity_listview_finish">是否完成</string>
    <string name="order_activity_listview_remark">备注</string>
    <string name="login_activity_title">登录</string>
    <string name="main_activity_title">主页</string>
    <string name="check_table_activity_title">查桌</string>
    <string name="create_table_activity_title">开桌</string>
    <string name="check_order_activity_title">查单</string>
    <string name="order_activity_title">订单</string>
    <string name="menu_activity_title">菜单</string>
    <string name="order_menu_activity_title">点菜</string>
    <string name="change_table_activity_title">转桌</string>
    <string name="union_table_activity_title">并桌</string>
    <string name="update_activity_title">更新</string>
    <string name="order_activity_submit_order">提交订单</string>
    <string name="order_activity_want_to_delete_menu">确定要删除这个菜么？</string>
    <string name="order_activity_want_to_delete_order">确定要删除这个订单么？</string>
    <string name="order_activity_submit_order_remote_failure">订单提交失败，请重新再试</string>
    <string name="order_activity_delete_order_remote_failure">删除订单失败，请重新再试</string>
    <string name="menu_activity_listview_menu_type">类别</string>
    <string name="menu_activity_listview_menu">菜名</string>
    <string name="menu_activity_listview_price">价格</string>
    <string name="menu_activity_menu_type_is_incorrect">这种菜单类型不存在，请检查数据库</string>
    <string name="order_menu_activity_menu_label_textview">菜名</string>
    <string name="order_menu_activity_amount_label_textview">数量</string>
    <string name="order_menu_activity_remark_label_textview">备注</string>
    <string name="order_menu_activity_ok_button">确定</string>
    <string name="order_menu_activity_cancel_button">取消</string>
    <string name="order_menu_activity_amount_is_null">输入不能为空，请重新输入</string>
    <string name="order_activity_finish_true">是</string>
    <string name="order_activity_finish_false">否</string>
    <string name="update_activity_button">开始更新</string>
    <string name="update_activity_result_label_textview">更新结果</string>
    <string name="update_activity_result_true">成功</string>
    <string name="update_activity_result_false">失败</string>
    <string name="change_table_activity_table1_label_textview">桌号1</string>
    <string name="change_table_activity_table2_label_textview">桌号2</string>
    <string name="change_table_activity_button">转换</string>
    <string name="change_table_activity_table_num_is_null">桌号为空，请重新输入</string>
    <string name="union_table_activity_table1_label_textview">桌号1</string>
    <string name="union_table_activity_button">合并</string>
    <string name="union_table_activity_table_num_is_null">桌号不能为空，请重新输入</string>
    <string name="union_table_activity_table2_label_textview">桌号2</string>
    <string name="change_table_activity_remote_failure">桌号转换失败，请重新操作</string>
    <string name="union_table_activity_remote_failure">桌号合并失败，请重新再试</string>
    <string name="prefs_activity_empty_table_notice_title">空桌通知</string>
    <string name="prefs_activity_empty_table_notice_summary">请选择是否订阅空桌通知</string>
    <string name="prefs_activity_finish_menu_notice_title">上菜通知</string>
    <string name="prefs_activity_finish_menu_notice_summary">请选择是否订阅上菜通知</string>
    <string name="notice_service_empty_table">有空位了</string>
    <string name="notice_service_finish_menu">号桌有菜上</string>
    <string name="yes">是</string>
    <string name="no">否</string>

</resources>
