<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/order_activity_listview_menu_textview"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/order_activity_listview_menu" />

    <TextView
        android:id="@+id/order_activity_listview_price_textview"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:text="@string/order_activity_listview_price" />

    <TextView
        android:id="@+id/order_activity_listview_amount_textview"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:text="@string/order_activity_listview_amount" />

    <TextView
        android:id="@+id/order_activity_listview_finish_textview"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/order_activity_listview_finish" />

    <TextView
        android:id="@+id/order_activity_listview_remark_textview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_activity_listview_remark" />

</LinearLayout>
