<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_vertical"
        android:stretchColumns="1" >

        <TableRow
	        android:id="@+id/tableRow1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/order_activity_order_label_textview"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/order_activity_order" />
	
	        <TextView
	            android:id="@+id/order_activity_order_value_textview"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp" />

    	</TableRow>

    	<TableRow
	        android:id="@+id/tableRow2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/order_activity_table_label_textview"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/order_activity_table" />
	
	        <TextView
	            android:id="@+id/order_activity_table_value_textview"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp" />

		</TableRow>

		<TableRow
	        android:id="@+id/tableRow3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/order_activity_waiter_label_textview"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/order_activity_waiter" />
	
	        <TextView
	            android:id="@+id/order_activity_waiter_value_textview"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp" />

		</TableRow>

    	<TableRow
	        android:id="@+id/tableRow4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/order_activity_time_label_textview"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/order_activity_time" />
	
	        <TextView
	            android:id="@+id/order_activity_time_value_textview"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp" />

    	</TableRow>

    	<TableRow
	        android:id="@+id/tableRow5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/order_activity_pay_label_textview"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/order_activity_pay" />
	
	        <TextView
	            android:id="@+id/order_activity_pay_value_textview"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp" />
	
    	</TableRow>

	</TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <Button
        	android:id="@+id/order_activity_order_menu_button"
			style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/order_activity_order_menu" />

        <Button
            android:id="@+id/order_activity_submit_order_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/order_activity_submit_order" />

		<Button
			android:id="@+id/order_activity_return_main_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/order_activity_return_main" />

		<Button
			android:id="@+id/order_activity_delete_order_button"
			style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/order_activity_delete_order" />

    </LinearLayout>

    <ListView
        android:id="@+id/order_activity_menulist_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    </ListView>

</LinearLayout>
