<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="35dp" >

            <TextView
                android:id="@+id/order_menu_activity_menu_label_textview"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/order_menu_activity_menu_label_textview" />

            <TextView
                android:id="@+id/order_menu_activity_menu_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/order_menu_activity_amount_label_textview"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/order_menu_activity_amount_label_textview" />

            <EditText
                android:id="@+id/order_menu_activity_amount_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" >

                <requestFocus />
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/order_menu_activity_remark_label_textview"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/order_menu_activity_remark_label_textview" />

            <EditText
                android:id="@+id/order_menu_activity_remark_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/order_menu_activity_ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:text="@string/order_menu_activity_ok_button" />

        <Button
            android:id="@+id/order_menu_activity_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:text="@string/order_menu_activity_cancel_button" />

    </LinearLayout>

</LinearLayout>
