<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="60dp" >

        <TextView
            android:id="@+id/union_table_activity_table1_label_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/union_table_activity_table1_label_textview" />

        <EditText
            android:id="@+id/union_table_activity_table1_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="60dp" >

        <TextView
            android:id="@+id/union_table_activity_table2_label_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/union_table_activity_table2_label_textview" />

        <EditText
            android:id="@+id/union_table_activity_table2_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

    <Button
        android:id="@+id/union_table_activity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="80dp"
        android:text="@string/union_table_activity_button" />

</LinearLayout>
